Bug 28430 - [865G] OOPS when stolen memory set to zero
Summary: [865G] OOPS when stolen memory set to zero
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-07 13:23 UTC by Ondrej Zary
Modified: 2017-07-24 23:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg with some printk()s added (19.20 KB, text/plain)
2010-06-07 13:23 UTC, Ondrej Zary
no flags Details
PATCH: Don't oops with zero stolen memory (1.28 KB, patch)
2010-06-14 10:19 UTC, Ondrej Zary
no flags Details | Splinter Review

Description Ondrej Zary 2010-06-07 13:23:04 UTC
Created attachment 36115 [details]
dmesg with some printk()s added

When using PCI graphics card on Asus P4P800-VM, "onboard video memory" can be set to "Disabled" in BIOS. With this configuration, kernel oopses and neverending oops stream begins. Looks like some bad memory corruption as the first oops is caused by alloc_page():

...
[    9.274228] agpgart-intel 0000:00:00.0: Intel 865 Chipset
[    9.338983] agp_backend_initialize()
[    9.385696] ACPI: Power Button [PWRF]
[    9.435231] before create_gatt_table
[    9.478104] intel_i830_create_gatt_table()
[    9.545970] agpgart-intel 0000:00:00.0: no pre-allocated video memory detected
[    9.632693] intel_i830_create_gatt_table() end
[    9.687944] before configure
[    9.722587] intel_i830_configure()
[    9.763361] e8000000
[    9.792026] before global_cache_flush
[    9.836043] before intel_i830_setup_flush
[    9.884075] intel_i830_setup_flush(), i8xx_page=(null)
[    9.945629] before alloc_page
[    9.989831] BUG: unable to handle kernel paging request at dfcd1000
[    9.992005] IP: [<c106db38>] copy_user_highpage+0x3c/0x47
...
Comment 1 Ondrej Zary 2010-06-14 10:19:55 UTC
Created attachment 36269 [details] [review]
PATCH: Don't oops with zero stolen memory

Attached patch fixes the problem by cleanly aborting the initialization:

agpgart-intel 0000:00:00.0: Intel 865 Chipset
agpgart-intel 0000:00:00.0: no pre-allocated video memory detected
agpgart-intel 0000:00:00.0: can't get memory for graphics translation table
agpgart-intel 0000:00:00.0: agp_backend_initialize() failed
agpgart-intel: probe of 0000:00:00.0 failed with error -12
Comment 2 Chris Wilson 2010-07-08 03:01:26 UTC
Eric applied the patch to his next tree, so it will be upstreamed with 2.6.36. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.